# Fake-Identity-Parser

./: .gitignore  CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.hpp  HtmlParser.cpp  HtmlParser.hpp  HttpClient.cpp  HttpClient.hpp  JsonWriter.cpp  JsonWriter.hpp  Logger.cpp  Logger.hpp  Makefile  README.md  config.json  identity_parser.cpp
